[gd_scene load_steps=3 format=3 uid="uid://bgu8dfbicqqeq"]

[ext_resource type="Script" uid="uid://bo8aqw3dndjxt" path="res://script/phone.gd" id="1_phbhh"]
[ext_resource type="Texture2D" uid="uid://cv0mjkr8samim" path="res://assets/去除聊天框.png" id="2_pmu8d"]

[node name="Phone" type="Node2D"]
script = ExtResource("1_phbhh")

[node name="phoneLayout" type="Sprite2D" parent="."]
position = Vector2(1085, 358.75)
scale = Vector2(0.578125, 0.546113)
texture = ExtResource("2_pmu8d")

[node name="SubViewport" type="CanvasLayer" parent="."]

[node name="BankApp" type="Button" parent="SubViewport"]
offset_left = 915.0
offset_top = 118.0
offset_right = 1015.0
offset_bottom = 218.0
text = "Bank"
metadata/_edit_use_anchors_ = true

[node name="HouseApp" type="Button" parent="SubViewport"]
offset_left = 1029.0
offset_top = 118.0
offset_right = 1129.0
offset_bottom = 218.0
text = "House
"

[node name="JobApp" type="Button" parent="SubViewport"]
offset_left = 1149.0
offset_top = 119.0
offset_right = 1249.0
offset_bottom = 219.0
text = "Job"

[connection signal="pressed" from="SubViewport/BankApp" to="." method="_on_bank_app_pressed"]
[connection signal="pressed" from="SubViewport/HouseApp" to="." method="_on_company_app_pressed"]
[connection signal="pressed" from="SubViewport/JobApp" to="." method="_on_job_app_pressed"]
